--- a/src/main/java/view/ChiTietSPView.form
+++ b/src/main/java/view/ChiTietSPView.form
@@ -353,6 +353,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Clear"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_clearMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
