--- a/src/main/java/view/NhanVienView.form
+++ b/src/main/java/view/NhanVienView.form
@@ -642,6 +642,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="X&#xf3;a"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_xoabaohanhchitietMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
